<resources>
    <string name="app_name">谷歌框架安装器</string>
    <string name="app_title">酷安谷歌框架安装器</string>
    <string name="action_feedback">反馈</string>
    <string name="action_about">关于</string>
    <string name="title_activity_about">关于</string>
    <string name="action_reboot">重启设备</string>

    <string name="title_install_status">当前状态</string>
    <string name="title_gapps">谷歌服务</string>
    <string name="title_gapps_framework">谷歌服务基本框架</string>
    <string name="title_gapps_extension">谷歌服务扩展部件</string>
    <string name="title_gapps_family">谷歌应用</string>
    <string name="title_flash_zip">从刷机包安装</string>
    <string name="title_flash_zip_summary">选择谷歌套件刷机包(.zip)，我们将自动帮您安装，此过程无需进入recovery模式</string>
    <string name="title_package_update_date">更新日期</string>
    <string name="title_package_size">文件大小</string>
    <string name="title_package_details">包含文件</string>
    <string name="title_no_info">暂无信息</string>
    <string name="title_downloading">正在下载</string>
    <string name="title_downloaded">已下载 %s</string>
    <string name="title_install_finished">安装完成</string>
    <string name="title_install_failed">安装失败</string>
    <string name="title_choose_file">选择文件</string>
    <string name="title_gapps_browse">前往酷市场下载谷歌系列以及更多好玩儿的应用</string>
    <string name="title_alert">提示</string>
    <string name="title_warning">警告</string>
    <string name="title_input_contact">您的QQ或者邮箱</string>
    <string name="title_contact_input_short">联系方式</string>
    <string name="title_feedback_input">反馈内容</string>
    <string name="title_update_available">发现新版本</string>
    <string name="title_check_update">检查更新</string>
    <string name="title_confirm_reboot">是否立即重启设备?</string>
    <string name="title_install_confirm">即将开始安装谷歌应用框架，这有可能导致您的系统异常，请确认系统备份然后继续</string>


    <string name="btn_install">立即安装</string>
    <string name="btn_installed">已安装</string>
    <string name="btn_not_installed">安装</string>
    <string name="btn_uninstall">卸载</string>
    <string name="btn_collapse">收起</string>
    <string name="btn_more">更多</string>
    <string name="btn_open_file">选择文件</string>
    <string name="btn_ok">确定</string>
    <string name="btn_check">查看</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_done">完成</string>
    <string name="btn_reboot">重启</string>
    <string name="btn_go_market">前往酷市场</string>
    <string name="btn_download">下载</string>
    <string name="btn_close">关闭</string>
    <string name="btn_share">分享</string>
    <string name="btn_ignore">忽略</string>
    <string name="btn_install_more">安装更多</string>
    <string name="btn_install_coolmarket">安装酷市场</string>
    <string name="btn_continue">继续</string>


    <string name="msg_loading">请稍候&#8230;</string>
    <string name="msg_no_more_gapps">暂无更多谷歌应用</string>
    <string name="msg_no_root">系统检测到没有root权限，请检查设备是否正确root</string>
    <string name="msg_check_root">正在检测root权限&#8230;</string>
    <string name="msg_min_gapps_installed">已安装基本框架</string>
    <string name="msg_min_gapps_incomplete">发现未安装的框架</string>
    <string name="msg_min_gapps_not_installed">未安装谷歌服务</string>
    <string name="msg_gapps_update_available">谷歌服务套件有可用的更新</string>
    <string name="msg_installing">正在安装</string>
    <string name="msg_checking_updates">正在检查更新</string>
    <string name="msg_check_update_failed">检查更新失败，请检查网络并重试</string>
    <string name="msg_start_download">开始下载</string>
    <string name="msg_download_failed">下载失败</string>
    <string name="msg_download_canceled">下载已取消</string>
    <string name="msg_download_finished">下载完成</string>
    <string name="msg_install_canceled">安装已取消</string>
    <string name="msg_install_finished">看起来安装已经成功了，系统需要重启一次使变更生效，是否继续？</string>
    <string name="msg_framework_need">您的谷歌基本框架尚未安装，请先安装基本服务框架</string>
    <string name="msg_already_installed">您已安装当前服务包，是否继续？</string>
    <string name="msg_error_interrupt">发生错误，安装已取消，您的手机不会受到任何更改</string>
    <string name="msg_install_failed">很抱歉安装没有成功，向我们反馈一下吧</string>
    <string name="msg_choose_file_failed">无法获取选择的文件信息，请重试</string>
    <string name="msg_open_chooser_failed">无法选择文件，请确保您的系统安装了文件管理器</string>
    <string name="msg_choose_valid_zip">请选择正确的zip格式的文件</string>
    <string name="msg_contact_cannot_be_empty">联系方式不能为空</string>
    <string name="msg_feedback_cannot_be_empty">请输入反馈内容</string>
    <string name="msg_feedback_success">感谢您的反馈！</string>
    <string name="msg_no_app_update">您使用的已经是最新版本了</string>
    <string name="msg_like1">喜欢本应用，嗯？</string>
    <string name="msg_like2">还不分享给朋友，嗯？</string>
    <string name="msg_like3">还要我动手，嗯？</string>
    <string name="msg_like4">还点，嗯？要我承包你？</string>
    <string name="msg_thanks_to_open_source_social"></string>
    <string name="msg_download_coolmarket">开始下载酷市场&#8230;</string>
    <string name="msg_worker_busy">有任务正在进行中，请稍后再试</string>

    <string name="coolmarket_url"></string>
    <string name="share_text">跟大家分享一款应用，由 @酷安网 出品[谷歌框架安装器]，如题大家懂的，需要ROOT，下载 http://fir.im/gmsinstaller</string>
    <string name="open_source_lst">出自酷安『屌爆了』团队\n\n酷安 － 发现应用的乐趣\nhttp://www.coolapk.com\n\n\n感谢以下开源库的支持\n\nAndroid support library\nAndroguide/FlashGordon\nafollestad/material-dialogs\nrengwuxian/MaterialEditText\numano/SlidingUpPanel\ngreenrobot/EventBus\nlecho/filechooser\nsquare/okhttp\nsquare/okio\nGson</string>
    <string name="gapps_minimal">基本服务框架\nPlay商店\n联系人同步\n日历同步</string>
    <string name="gapps_extension">人脸解锁\nGoogle搜索\nGoogle Ears\nGoogle TTS</string>

    <string-array name="gapps_description">
        <item>@string/gapps_minimal</item>
        <item>@string/gapps_extension</item>
    </string-array>

</resources>
