<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/title_flash_zip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_flash_zip_summary" />

            <TextView
                android:id="@+id/flash_selected_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                android:textColor="@color/primary_text_disabled_material_light" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/flash_select_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:padding="8dp"
                    android:text="@string/btn_open_file"
                    android:textColor="?colorAccent" />

                <TextView
                    android:id="@+id/flash_confirm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/flash_select_btn"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="8dp"
                    android:text="@string/btn_install"
                    android:textColor="?colorAccent"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>